--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DeckContext": "Server=(localdb)\\mssqllocaldb;Database=Decks;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
